# Chain-of-Dynamics

./: .gitignore  LICENSE  README.md  analyze_data_characteristics.py  analyze_data_simple.py  environment.yml  example_usage.py  pyproject.toml  requirements.txt  run_all_experiments.py
.claude/: settings.local.json
analysis/: analysis_utils.py  feature_analysis.py  model_analysis.py  run_analysis.py  temporal_analysis.py
assets/: Chain_of_Influence_demo.ipynb  README.md
config/: adacare_config.yaml  bilstm_config.yaml  coi_config.yaml  config.yaml  feature_names.yaml  mimiciv_adacare_config.yaml  mimiciv_bilstm_config.yaml  mimiciv_coi_config.yaml  mimiciv_retain_config.yaml  mimiciv_stagenet_config.yaml  mimiciv_transformer_config.yaml  retain_config.yaml  stagenet_config.yaml  tfcam_config.yaml  transformer_config.yaml
data/: README.md
demos/: README.md
demos/colab/: demo.ipynb  sample_influence_matrix.csv
docs/: Chain_of_Influence_AAAI_2026.tex  appendix.tex  paper_visualization_guide.md  references.bib
models/: best_hyperparameters.yaml  best_model.pt  ctga.py  retain.py  tfcam.py
results/: results_analysis_summary.json
scripts/: analyze.py  analyze_results.py  preprocess_ckd_fast.py  preprocess_mimiciv.py  train.py
src/data/: enhanced_preprocessing.py  preprocess.py  tsmote.py
src/models/: adacare.py  bilstm.py  coi.py  retain.py  stagenet.py  transformer.py
src/utils/: report_best_model.py
utils/: hyperparameter_tuning.py  preprocess.py  report_best_model.py  train.py
